--- a/beija_flor_holograma.html
+++ b/beija_flor_holograma.html
@@ -23,7 +23,8 @@
              <img src="imagens/beija-flor.png" alt="">
              
              <article class="portfolio">
-              <video src="videos/beija-flor.mp4" controls autoplay loop muted></video>            
+              <video src="videos/beija-flor.mp4" controls autoplay loop muted></video>
+              <p><b><i>OBS:</i></b> <a href="https://www.youtube.com/watch?v=ejiDPkVXbqs&t=72s" target="_blank" >Assista a este vídeo para entender como fazer um holograma para celular!</a></p>            
              </article>
              
 
